src/test/deca/context/invalid/intermediaire2/boolean/00assign-boolean.deca
// Description:
// Test de l'erreur contextuelle de l'assignation d'un booléen dans un entier.
//
// Resultats:
//  00assign-boolean.deca:11:8:
//
// Historique:
//    crée le 10/06/2022
{
    int x;
    x = true;
}